[package]
name = "fil-sapling-crypto"

authors = ["Sean Bowe <sean@z.cash>"]
description = "Cryptographic library for Zcash Sapling"
documentation = "https://github.com/zcash-hackworks/sapling"
homepage = "https://github.com/filecoin-project/sapling-crypto"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/sapling-crypto"
version = "0.6.3"
edition = "2018"

[dependencies]
rand_core = "0.5"
rand = "0.7"
byteorder = "1"
fff = { version = "0.2.1", features = ["derive"] }
paired =  { version = "0.20.0", features = ["expose-arith"] }
# bellperson = "0.9.0"
bellperson = { path = "../bellperson" }
blake2b_simd = "0.5"
blake2s_simd = "0.5"
lazy_static = "1.4.0"

[dev-dependencies]
digest = "0.8.1"
hex-literal = "0.2"
rust-crypto = "0.2"
rand_xorshift = "0.2.0"

[target.'cfg(target_arch = "x86_64")'.build-dependencies]
cc = "1.0"

[features]
default = []
gpu = ["bellperson/gpu"]
